syntax = "proto3";

option csharp_namespace = "Node";

service BootNode { 
  // These are the real API
  // Connection endpoints
  rpc Connect(ConnectRequest) returns (ConnectReply);
  rpc Disconnect(DisconnectRequest) returns (DisconnectReply);
}

message ConnectRequest {
  string clientAddr = 1;
  string friendlyName = 2;
}

message ConnectReply {
  string message = 1;
}

message DisconnectRequest {
  string clientAddr = 1;
  string friendlyName = 2;
}

message DisconnectReply {
  string message = 1;
}
